# Todo-List-API-DRM

./: README.md  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_todoitem.py
api/tests/system/: test_api.py
api/tests/unit/: test_models.py
todo_api/: settings.py  urls.py
