[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = "Simple Todo List API with Djano Rest Framework"
authors = ["Femi Ayo-Tubosun <femiayotubosun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
black = "^21.10b0"
pymy = "^0.0.8"
coverage = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
